# dioxus-bevy

./: Cargo.toml  Dioxus.toml  README.md  index.html
assets/: dioxus-bevy-example-dxh2a8176f72aeaf06f.js  dioxus-bevy-example-dxh3939246566327f3.js  tailwind.css
src/: generate_custom_mesh.rs  main.rs
