[package]
name = "dioxus-bevy-example"
version = "0.1.0"
authors = ["Christopher Armstrong <227068+radix@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
dioxus-logger = "0.7.1"
bevy = "0.17.3"
tracing = "0.1.41"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
# Explicit web-sys for console logging from WASM (needed when directly calling web_sys::console)
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1"

# # Enable a small amount of optimization in the dev profile.
# [profile.dev]
# opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
